# hello-ogre3d

./: .gitignore  CMakeLists.txt  CMakeLists.txt.win  OgreApplication.cpp  OgreApplication.h  README.md  build-ogre3d-debug-win.sh  install-ogre3d-win.sh  install-ogre3d.sh  main.cpp  plugins.cfg  plugins.cfg.dist  plugins.cfg.win  resources.cfg
